fix sidebar on IE

--- a/assets/css/ff3l.less
+++ b/assets/css/ff3l.less
@@ -106,7 +106,7 @@ body {
 //  \______/ \______|\_______/ \________|\_______/ \__|  \__|\__|  \__| \______/
 
 .sidebar {
-    height: 100%;
+    height: 100% !important;
     position: fixed;
     background-color: transparent;
 }
